--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,34 @@ blockquote p {
     font-style: italic;
     color: #1f2937;
 }
+
+body {
+    margin: 0;
+}
+
+.nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+li {
+    margin: 10px;
+}
+
+a {
+    text-decoration: none;
+}
+
+* {
+    border: 1px red solid;
+}
