--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,37 @@ a {
     width: 500px;
 }
 
+.section-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0;
+}
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 40px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 150px;
+    text-align: center;
+}
+
+.image-border {
+    border: 4px #3882F6 solid;
+    border-radius: 10px;
+    width: 120px;
+    height: 120px;
+}
+
+
 * {
     border: 1px red solid;
 }
