--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ a {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin: 50px 0;
+    padding-top: 50px;
 }
 
 .left {
@@ -137,7 +137,6 @@ a {
     height: 120px;
 }
 
-
-* {
-    border: 1px red solid;
+.section-1 {
+    padding-bottom: 100px;
 }
