--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border: 1px solid red;
 }
 
 .section-1,
@@ -47,12 +48,17 @@ h2 {
 
 .section-3 {
     background-color: #E5E8EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
 }
 
 blockquote p {
     font-size: 36px;
     font-style: italic;
     color: #1f2937;
+    margin: 0;
 }
 
 body {
@@ -112,7 +118,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 50px 0;
+    padding: 50px 0;
 }
 
 .card-container {
@@ -139,4 +145,18 @@ a {
 
 .section-1 {
     padding-bottom: 100px;
+}
+
+blockquote {
+    width: 55%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+blockquote footer {
+    font-size: 20px;
+    font-weight: bolder;
+    align-self: flex-end;
 }
