--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    border: 1px solid red;
 }
 
 .section-1,
@@ -38,6 +37,7 @@ button {
     padding: 5px 30px;
     border-radius: 5px;
     font-weight: bolder;
+    border-style: none;
 }
 
 h2 {
@@ -189,4 +189,12 @@ blockquote footer {
 
 .action-container button {
     border: 2px solid white;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #E5E7EB;
+    padding: 25px 0;
 }
